--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "bower install && grunt build"
   },
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "express": "^4.18.1",
     "node-fetch": "^3.2.9",
     "playwright": "^1.24.1",
     "playwright-chromium": "^1.24.1"
