--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "express": "^4.18.1",
     "node-fetch": "^3.2.9",
     "playwright": "^1.24.1",
     "playwright-chromium": "^1.24.1"
