--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npm install -g heroku",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
