--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "preinstall": "npm install heroku && heroku buildpacks:set https://github.com/mxschmitt/heroku-playwright-buildpack.git -a vaper-app",
+    "preinstall": "npm install heroku && heroku plugins:install buildpack-registry && heroku buildpacks:set https://github.com/mxschmitt/heroku-playwright-buildpack.git -a vaper-app",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
