--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "heroku-prebuild": "heroku create --buildpack https://github.com/playwright-community/heroku-playwright-buildpack.git",
+    "heroku-postbuild": "heroku buildpacks:set https://github.com/mxschmitt/heroku-playwright-buildpack.git -a vaper-app",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
