--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
-    "buildpacks": [
-        {
-            "url": "https://github.com/mxschmitt/heroku-playwright-buildpack.git"
-        },
-        {
-            "url": "https://github.com/heroku/heroku-buildpack-nodejs"
-        }
-    ]
+  "name": "Vaper app",
+  "buildpacks": [
+    {
+      "url": "https://github.com/mxschmitt/heroku-playwright-buildpack.git"
+    },
+    {
+      "url": "https://github.com/heroku/heroku-buildpack-nodejs"
+    }
+  ]
 }
